--- a/autores.html
+++ b/autores.html
@@ -35,5 +35,7 @@
       <li>👨‍🔬 Nome 2 – Instituição</li>
     </ul>
   </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
