--- a/praticas.html
+++ b/praticas.html
@@ -31,5 +31,7 @@
     <h1 class="fw-bold mb-4">Práticas</h1>
     <p>Aqui você pode descrever as práticas de laboratório/computacionais utilizadas no curso.</p>
   </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
