--- a/referencia.html
+++ b/referencia.html
@@ -36,5 +36,7 @@
       <li><a href="https://snpeff.sourceforge.net/">SnpEff</a></li>
     </ul>
   </section>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
