--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <div class="col-md-4 text-center">
       <div class="icon-circle">🧬</div>
       <h5><a href="fasta.html" class="text-decoration-none">Arquivo FASTA</a></h5>
-      <p>Estrutura e formato do arquivo de referência genômica.</p>
+      <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
     </div>
 
     <div class="col-md-4 text-center">
       <div class="icon-circle">🧪</div>
       <h5><a href="qc.html" class="text-decoration-none">Controle de Qualidade</a></h5>
-      <p>QC dos arquivos FASTQ utilizando FastQC/MultiQC.</p>
+      <p>QC dos arquivos FASTQ. </p>
     </div>
 
     <div class="col-md-4 text-center">
@@ -29,13 +29,13 @@
     <div class="col-md-4 text-center">
       <div class="icon-circle">🔎</div>
       <h5><a href="variantes.html" class="text-decoration-none">Chamada de Variantes</a></h5>
-      <p>Identificação de SNVs e indels a partir do BAM/CRAM.</p>
+      <p>Identificação de SNVs e indels nas amostras.</p>
     </div>
 
     <div class="col-md-4 text-center">
       <div class="icon-circle">📑</div>
       <h5><a href="anotacao.html" class="text-decoration-none">Anotação de Variantes</a></h5>
-      <p>Enriquecimento funcional com SnpEff, dbNSFP, ClinVar.</p>
+      <p>Enriquecimento funcional das variantes.</p>
     </div>
 
     <div class="col-md-12 text-center">
@@ -46,3 +46,4 @@
 
   </div>
 </section>
+
