--- a/autores.html
+++ b/autores.html
@@ -31,11 +31,11 @@
     <h1 class="fw-bold mb-4">Autores</h1>
     <p>Liste aqui os organizadores, instrutores e colaboradores do curso.</p>
     <ul>
-      <li>👩‍🔬 Nome 1 – Instituição</li>
-      <li>👨‍🔬 Nome 2 – Instituição</li>
+      <li>👩‍🔬 Sophia Pereira Ozório – Graduanda em Informática Biomédica - USP</li>
     </ul>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
