--- a/index.html
+++ b/index.html
@@ -1,43 +1,101 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Conteúdo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    body {
+      background-color: #fff;
+      color: #222;
+      font-family: "Inter", sans-serif;
+    }
+
+    h2 {
+      font-weight: 700;
+      color: #0d1b2a;
+    }
+
+    .icon-circle {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      width: 60px;
+      height: 60px;
+      background-color: #eaf0ff;
+      border-radius: 50%;
+      font-size: 24px;
+      margin-bottom: 15px;
+    }
+
+    h5 a {
+      font-weight: 700;
+      color: #0d1b2a;
+      text-decoration: none;
+    }
+
+    h5 a:hover {
+      color: #0066ff;
+      text-decoration: underline;
+    }
+
+    p {
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+
 <section class="container py-5">
   <h2 class="text-center fw-bold mb-4">Conteúdo</h2>
+  <p class="text-center text-secondary mb-5">Pipeline de análise em exoma.(2025/2)</p>
+
   <div class="row g-4">
 
+    <!-- Arquivo FASTA -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">🧬</div>
       <h5><a href="fasta.html" class="text-decoration-none">Arquivo FASTA</a></h5>
       <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
     </div>
 
+    <!-- Controle de Qualidade -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">🧪</div>
       <h5><a href="qc.html" class="text-decoration-none">Controle de Qualidade</a></h5>
-      <p>QC dos arquivos FASTQ. </p>
+      <p>QC dos arquivos FASTQ.</p>
     </div>
 
+    <!-- Trimagem -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">✂️</div>
       <h5><a href="trimagem.html" class="text-decoration-none">Trimagem</a></h5>
       <p>Remoção de adaptadores e bases de baixa qualidade.</p>
     </div>
 
+    <!-- Alinhamento -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">📌</div>
       <h5><a href="alinhamento.html" class="text-decoration-none">Alinhamento</a></h5>
       <p>Mapeamento das leituras contra o genoma de referência.</p>
     </div>
 
+    <!-- Chamada de Variantes -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">🔎</div>
       <h5><a href="variantes.html" class="text-decoration-none">Chamada de Variantes</a></h5>
       <p>Identificação de SNVs e indels nas amostras.</p>
     </div>
 
+    <!-- Anotação de Variantes -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">📑</div>
       <h5><a href="anotacao.html" class="text-decoration-none">Anotação de Variantes</a></h5>
       <p>Enriquecimento funcional das variantes.</p>
     </div>
 
+    <!-- Análises -->
     <div class="col-md-12 text-center">
       <div class="icon-circle">📊</div>
       <h5><a href="analises.html" class="text-decoration-none">Análises</a></h5>
@@ -46,4 +104,8 @@
 
   </div>
 </section>
+
+</body>
+</html>
+
 
