--- a/index.html
+++ b/index.html
@@ -56,49 +56,49 @@
     <!-- Arquivo FASTA -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">🧬</div>
-      <h5><a href="fasta.html" class="text-decoration-none">Arquivo FASTA</a></h5>
+      <h5><a href="fasta.html" class="text-decoration-none">1. Arquivo FASTA</a></h5>
       <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
     </div>
 
     <!-- Controle de Qualidade -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">🧪</div>
-      <h5><a href="qc.html" class="text-decoration-none">Controle de Qualidade</a></h5>
+      <h5><a href="qc.html" class="text-decoration-none">2. Controle de Qualidade</a></h5>
       <p>QC dos arquivos FASTQ.</p>
     </div>
 
     <!-- Trimagem -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">✂️</div>
-      <h5><a href="trimagem.html" class="text-decoration-none">Trimagem</a></h5>
+      <h5><a href="trimagem.html" class="text-decoration-none">3. Trimagem</a></h5>
       <p>Remoção de adaptadores e bases de baixa qualidade.</p>
     </div>
 
     <!-- Alinhamento -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">📌</div>
-      <h5><a href="alinhamento.html" class="text-decoration-none">Alinhamento</a></h5>
+      <h5><a href="alinhamento.html" class="text-decoration-none">4. Alinhamento</a></h5>
       <p>Mapeamento das leituras contra o genoma de referência.</p>
     </div>
 
     <!-- Chamada de Variantes -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">🔎</div>
-      <h5><a href="variantes.html" class="text-decoration-none">Chamada de Variantes</a></h5>
+      <h5><a href="variantes.html" class="text-decoration-none">5. Chamada de Variantes</a></h5>
       <p>Identificação de SNVs e indels nas amostras.</p>
     </div>
 
     <!-- Anotação de Variantes -->
     <div class="col-md-4 text-center">
       <div class="icon-circle">📑</div>
-      <h5><a href="anotacao.html" class="text-decoration-none">Anotação de Variantes</a></h5>
+      <h5><a href="anotacao.html" class="text-decoration-none">6. Anotação de Variantes</a></h5>
       <p>Enriquecimento funcional das variantes.</p>
     </div>
 
     <!-- Análises -->
     <div class="col-md-12 text-center">
       <div class="icon-circle">📊</div>
-      <h5><a href="analises.html" class="text-decoration-none">Análises</a></h5>
+      <h5><a href="analises.html" class="text-decoration-none">7. Análises</a></h5>
       <p>Exploração estatística e interpretação biológica dos resultados.</p>
     </div>
 
@@ -107,5 +107,6 @@
 
 </body>
 </html>
+
 
 
