--- a/index.html
+++ b/index.html
@@ -46,6 +46,27 @@
   </style>
 </head>
 <body>
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <div class="container">
+
+    <!-- Botão para menu colapsável em telas pequenas -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Itens do menu -->
+    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
+        <li class="nav-item"><a class="nav-link" href="referencias.html">Referências</a></li>
+        <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
 <section class="container py-5">
   <h2 class="text-center fw-bold mb-4">Conteúdo</h2>
@@ -107,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
