--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <section class="container py-5">
   <h2 class="text-center fw-bold mb-4">Conteúdo</h2>
-  <p class="text-center text-secondary mb-5">Pipeline de análise em exoma.(2025/2)</p>
+  <p class="text-center text-secondary mb-5">Pipeline de análise em dados de exoma para genômica humana. (2025/2)</p>
 
   <div class="row g-4">
 
@@ -128,6 +128,7 @@
 
 </body>
 </html>
+
 
 
 
