--- a/index.html
+++ b/index.html
@@ -43,91 +43,108 @@
     p {
       color: #555;
     }
+
+    /* ===== NAVBAR ===== */
+    .navbar {
+      padding: 1rem 0;
+    }
+
+    .nav-link {
+      font-weight: 500;
+      margin: 0 1rem;
+      color: #333;
+      transition: color 0.2s, border-bottom 0.2s;
+    }
+
+    .nav-link:hover {
+      color: #007bff;
+    }
+
+    /* Item ativo (página atual) */
+    .nav-link.active {
+      color: #007bff;
+      border-bottom: 2px solid #007bff;
+    }
   </style>
 </head>
+
 <body>
-<!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
-  <div class="container">
-
-    <!-- Botão para menu colapsável em telas pequenas -->
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-
-    <!-- Itens do menu -->
-    <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
-        <li class="nav-item"><a class="nav-link" href="referencias.html">Referências</a></li>
-        <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
-      </ul>
+  <!-- Navbar centralizada -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <div class="container justify-content-center">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="referencias.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
-<section class="container py-5">
-  <h2 class="text-center fw-bold mb-4">Conteúdo</h2>
-  <p class="text-center text-secondary mb-5">Pipeline de análise em dados de exoma para genômica humana. (2025/2)</p>
+  <!-- Conteúdo principal -->
+  <section class="container py-5">
+    <h2 class="text-center fw-bold mb-4">Conteúdo</h2>
+    <p class="text-center text-secondary mb-5">Pipeline de análise em dados de exoma para genômica humana. (2025/2)</p>
 
-  <div class="row g-4">
+    <div class="row g-4">
 
-    <!-- Arquivo FASTA -->
-    <div class="col-md-4 text-center">
-      <div class="icon-circle">🧬</div>
-      <h5><a href="fasta.html" class="text-decoration-none">1. Arquivo FASTA</a></h5>
-      <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
+      <!-- Arquivo FASTA -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">🧬</div>
+        <h5><a href="fasta.html" class="text-decoration-none">1. Arquivo FASTA</a></h5>
+        <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
+      </div>
+
+      <!-- Controle de Qualidade -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">🧪</div>
+        <h5><a href="qc.html" class="text-decoration-none">2. Controle de Qualidade</a></h5>
+        <p>QC dos arquivos FASTQ.</p>
+      </div>
+
+      <!-- Trimagem -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">✂️</div>
+        <h5><a href="trimagem.html" class="text-decoration-none">3. Trimagem</a></h5>
+        <p>Remoção de adaptadores e bases de baixa qualidade.</p>
+      </div>
+
+      <!-- Alinhamento -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">📌</div>
+        <h5><a href="alinhamento.html" class="text-decoration-none">4. Alinhamento</a></h5>
+        <p>Mapeamento das leituras contra o genoma de referência.</p>
+      </div>
+
+      <!-- Chamada de Variantes -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">🔎</div>
+        <h5><a href="variantes.html" class="text-decoration-none">5. Chamada de Variantes</a></h5>
+        <p>Identificação de SNVs e indels nas amostras.</p>
+      </div>
+
+      <!-- Anotação de Variantes -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">📑</div>
+        <h5><a href="anotacao.html" class="text-decoration-none">6. Anotação de Variantes</a></h5>
+        <p>Enriquecimento funcional das variantes.</p>
+      </div>
+
+      <!-- Análises -->
+      <div class="col-md-12 text-center">
+        <div class="icon-circle">📊</div>
+        <h5><a href="analises.html" class="text-decoration-none">7. Análises</a></h5>
+        <p>Exploração estatística e interpretação biológica dos resultados.</p>
+      </div>
+
     </div>
-
-    <!-- Controle de Qualidade -->
-    <div class="col-md-4 text-center">
-      <div class="icon-circle">🧪</div>
-      <h5><a href="qc.html" class="text-decoration-none">2. Controle de Qualidade</a></h5>
-      <p>QC dos arquivos FASTQ.</p>
-    </div>
-
-    <!-- Trimagem -->
-    <div class="col-md-4 text-center">
-      <div class="icon-circle">✂️</div>
-      <h5><a href="trimagem.html" class="text-decoration-none">3. Trimagem</a></h5>
-      <p>Remoção de adaptadores e bases de baixa qualidade.</p>
-    </div>
-
-    <!-- Alinhamento -->
-    <div class="col-md-4 text-center">
-      <div class="icon-circle">📌</div>
-      <h5><a href="alinhamento.html" class="text-decoration-none">4. Alinhamento</a></h5>
-      <p>Mapeamento das leituras contra o genoma de referência.</p>
-    </div>
-
-    <!-- Chamada de Variantes -->
-    <div class="col-md-4 text-center">
-      <div class="icon-circle">🔎</div>
-      <h5><a href="variantes.html" class="text-decoration-none">5. Chamada de Variantes</a></h5>
-      <p>Identificação de SNVs e indels nas amostras.</p>
-    </div>
-
-    <!-- Anotação de Variantes -->
-    <div class="col-md-4 text-center">
-      <div class="icon-circle">📑</div>
-      <h5><a href="anotacao.html" class="text-decoration-none">6. Anotação de Variantes</a></h5>
-      <p>Enriquecimento funcional das variantes.</p>
-    </div>
-
-    <!-- Análises -->
-    <div class="col-md-12 text-center">
-      <div class="icon-circle">📊</div>
-      <h5><a href="analises.html" class="text-decoration-none">7. Análises</a></h5>
-      <p>Exploração estatística e interpretação biológica dos resultados.</p>
-    </div>
-
-  </div>
-</section>
+  </section>
 
 </body>
 </html>
+
 
 
 
