--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
-          <li class="nav-item"><a class="nav-link" href="referencias.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
       </div>
@@ -144,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
