--- a/autores.html
+++ b/autores.html
@@ -6,7 +6,10 @@
   <title>Autores - Exoma Pipeline</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style> body { padding-top: 70px; } 
-  
+      /* Item ativo (página atual) */
+    .nav-link.active {
+      color: #007bff;
+      border-bottom: 2px solid #007bff;
   </style>
 </head>
 <body>
@@ -16,10 +19,10 @@
     <div class="container justify-content-center">
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
           <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
-          <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
+          <li class="nav-item"><a class="nav-link active" href="autores.html">Autores</a></li>
         </ul>
       </div>
     </div>
@@ -27,7 +30,6 @@
      
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Autores</h1>
-    <p>Liste aqui os organizadores, instrutores e colaboradores do curso.</p>
     <ul>
       <li>👩‍🔬 Sophia Pereira Ozório – Graduanda em Informática Biomédica - USP</li>
     </ul>
@@ -35,6 +37,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
