--- a/praticas.html
+++ b/praticas.html
@@ -5,27 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Práticas - Exoma Pipeline</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style> body { padding-top: 70px; } </style>
+  <style> body { padding-top: 70px; } 
+      /* Item ativo (página atual) */
+    .nav-link.active {
+      color: #007bff;
+      border-bottom: 2px solid #007bff;
+  </style>
 </head>
 <body>
-  <!-- Navbar padrão -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
-        <div class="container">
-            <a class="navbar-brand fw-bold" href="index.html">Exoma Pipeline</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
-                    <li class="nav-item"><a class="nav-link" href="datasets.html">Datasets</a></li>
-                    <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="referencias.html">Referências</a></li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+
+  <!-- Navbar centralizada -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+    <div class="container justify-content-center">
+      <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link active" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Práticas</h1>
@@ -34,4 +35,5 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
