--- a/referencia.html
+++ b/referencia.html
@@ -21,8 +21,8 @@
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link active" href="praticas.html">Práticas</a></li>
-          <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link" href="praticas.html">Práticas</a></li>
+          <li class="nav-item"><a class="nav-link active" href="referencia.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
       </div>
@@ -41,5 +41,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
