--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
   <!-- Conteúdo principal -->
   <section class="container py-5">
-    <h2 class="text-center fw-bold mb-4">Conteúdo</h2>
+    <h1 class="text-center fw-bold mb-4">Conteúdo Teórico</h1>
     <p class="text-center text-secondary mb-5">Pipeline de análise em dados de exoma para genômica humana. (2025/2)</p>
 
     <div class="row g-4">
@@ -144,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
