--- a/praticas.html
+++ b/praticas.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Práticas - Exoma Pipeline</title>
+  <title>Práticas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style> body { padding-top: 70px; } 
       /* Item ativo (página atual) */
@@ -30,10 +30,11 @@
 
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Práticas</h1>
-    <p>Aqui você pode descrever as práticas de laboratório/computacionais utilizadas no curso.</p>
+    <p> lalalalala</p>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
