--- a/referencia.html
+++ b/referencia.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Referências - Exoma Pipeline</title>
+  <title>Referências</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style> body { padding-top: 70px; } 
       /* Item ativo (página atual) */
@@ -31,7 +31,7 @@
     
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Referências</h1>
-    <p>Adicione aqui artigos, links e materiais de apoio usados no curso.</p>
+    <p>Adicionar artigos, links úteis e materiais de apoio.</p>
     <ul>
       <li><a href="https://fastqc.org/">FastQC</a></li>
       <li><a href="https://multiqc.info/">MultiQC</a></li>
@@ -41,6 +41,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
