--- a/referencia.html
+++ b/referencia.html
@@ -33,14 +33,14 @@
     <h1 class="fw-bold mb-4">Referências</h1>
     <p>Adicionar artigos, links úteis e materiais de apoio.</p>
     <ul>
-      <li><a href="https://fastqc.org/">FastQC</a></li>
-      <li><a href="https://multiqc.info/">MultiQC</a></li>
-      <li><a href="https://snpeff.sourceforge.net/">SnpEff</a></li>
+      <li><a href="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/">FastQC</a></li>
+      <li><a href="https://seqera.io/multiqc/">MultiQC</a></li>
     </ul>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
