--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- Arquivo FASTA -->
       <div class="col-md-4 text-center">
         <div class="icon-circle">🧬</div>
-        <h5><a href="fasta.html" class="text-decoration-none">1. Arquivo FASTA e FASTQ</a></h5>
+        <h5><a href="fasta.html" class="text-decoration-none">1. Arquivo FASTQ</a></h5>
         <p>Estrutura e formato do arquivo que armazena sequências biológicas.</p>
       </div>
 
@@ -144,6 +144,7 @@
 
 </body>
 </html>
+
 
 
 
