--- a/fastq.html
+++ b/fastq.html
@@ -34,9 +34,9 @@
         <p class="card-text">
           Um arquivo <strong>FASTQ</strong> é um formato de texto utilizado para armazenar sequências biológicas obtidas por sequenciamento (como em NGS), junto com as pontuações de qualidade associadas a cada base. É o formato padrão para dados brutos de sequenciamento.<br>
           Cada entrada ocupa quatro linhas:<br>
-          1 - Identificador (header): Linha inicia com <code>"<code><code>@<code><code>"<code> seguido por um ID único da leitura.<br> 
+          1 - Identificador (header): Linha inicia com "<code>@</code>" seguido por um ID único da leitura.<br> 
           2 - Sequência de nucleotídeos: Contém a sequência de nucleotídeos (A, T, C, G e N para bases incertas).<br> 
-          3 - Separador: Linha começa com "<code>+<code>". É usada apenas para separar a sequência da linha de qualidade.<br> 
+          3 - Separador: Linha começa com "<code>+</code>". É usada apenas para separar a sequência da linha de qualidade.<br> 
           4 - Linha de valores de qualidade: Contém a pontuação de qualidade Phred (em código ASCII) atribuída a cada base da sequência correspondente. Quanto maior a pontuação, maior é a confiança na identificação daquela base.
         </p>
         <!-- Imagem do exemplo FASTQ -->
