--- a/fastq.html
+++ b/fastq.html
@@ -30,7 +30,7 @@
 
     <div class="card">
       <div class="card-body">
-        <h3 class="card-title">⚗️ FASTQ</h3>
+        <h3 class="card-title">FASTQ</h3>
         <p class="card-text">
           Um arquivo <strong>FASTQ</strong> é um formato de texto utilizado para armazenar sequências biológicas obtidas por sequenciamento (como em NGS), junto com as pontuações de qualidade associadas a cada base. É o formato padrão para dados brutos de sequenciamento.<br>
           Cada entrada ocupa quatro linhas:<br>
@@ -42,6 +42,18 @@
         <!-- Imagem do exemplo FASTQ -->
         <img src="https://www.researchgate.net/profile/Guilherme-Garbino/publication/343893376/figure/fig2/AS:928884652507138@1598474767588/Figura-34-Estrutura-de-um-arquivo-FASTQ-As-linhas-iniciadas-por-correspondem-as.png"
              alt="Exemplo de arquivo FASTQ"
+             class="img-fluid img-example">
+      </div>
+  
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Código ASCII</h3>
+          <p class="card-text">
+            O FASTQ não grava números diretamente (como Pherd Score 30 ou 40), mas sim caracteres ASCII que representam esses números. Isso economiza espaço e facilita a leitura por programas. Cada caractere ASCII tem um valor numérico associado.
+          </p>
+        <!-- Imagem do exemplo do código -->
+        <img src="https://www.drive5.com/usearch/manual7/qscores.gif"
+             alt="Tabela com o código ASCII"
              class="img-fluid img-example">
       </div>
     </div>
