--- a/fastq.html
+++ b/fastq.html
@@ -58,6 +58,13 @@
              class="img-fluid img-example">
         </div>
       </div>
+    <!-- Caixa de navegação para a prática -->
+    <div class="card mt-4 shadow-sm border-0">
+      <a href="pratica1.html" class="d-flex justify-content-between align-items-center p-3 text-decoration-none text-dark">
+        <span class="fw-semibold">Prática 1</span>
+        <span style="font-size: 1.3rem;">➜</span>
+      </a>
+    </div>
   </div>  
 </body>
 </html>
