--- a/praticas.html
+++ b/praticas.html
@@ -5,11 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Práticas</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style> body { padding-top: 70px; } 
-      /* Item ativo (página atual) */
+  <style>
+    body {
+      padding-top: 70px;
+      font-family: "Inter", sans-serif;
+    }
+
     .nav-link.active {
       color: #007bff;
       border-bottom: 2px solid #007bff;
+    }
+
+    /* Estilo da caixa expansível */
+    .accordion-button {
+      background-color: #f8f9fa;
+      color: #0d1b2a;
+      font-size: 1.1rem;
+      border-radius: 0.75rem !important;
+    }
+
+    .accordion-button:not(.collapsed) {
+      background-color: #eaf0ff;
+      color: #0044cc;
+      box-shadow: none;
+    }
+
+    .accordion-body {
+      background-color: #ffffff;
+      border-radius: 0 0 0.75rem 0.75rem;
+    }
   </style>
 </head>
 <body>
@@ -28,13 +52,29 @@
     </div>
   </nav>
 
+  <!-- Seção principal -->
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Práticas</h1>
-    <p> lalalalala</p>
+
+    <!-- Caixa expansível de Prática 1 -->
+    <div class="accordion mt-4" id="accordionPraticas">
+      <div class="accordion-item border-0 shadow-sm rounded-3">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#pratica1" aria-expanded="false" aria-controls="pratica1">
+            Prática 1
+          </button>
+        </h2>
+        <div id="pratica1" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p>Aqui entra o conteúdo explicativo da Prática 1.</p>
+            <p>Você pode colocar texto, imagens, ou até blocos de código e links aqui.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
   </section>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
-
-
-
