--- a/praticas.html
+++ b/praticas.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Práticas</title>
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+
   <style>
     body {
       padding-top: 70px;
       font-family: "Inter", sans-serif;
+      background-color: #f8f9fa;
+    }
+
+    /* Navbar */
+    .nav-link {
+      font-weight: 500;
+      margin: 0 1rem;
+      color: #333;
+      transition: color 0.2s, border-bottom 0.2s;
+    }
+
+    .nav-link:hover {
+      color: #007bff;
     }
 
     .nav-link.active {
@@ -16,12 +32,13 @@
       border-bottom: 2px solid #007bff;
     }
 
-    /* Estilo da caixa expansível */
+    /* Acordeão */
     .accordion-button {
       background-color: #f8f9fa;
       color: #0d1b2a;
       font-size: 1.1rem;
       border-radius: 0.75rem !important;
+      transition: all 0.2s ease;
     }
 
     .accordion-button:not(.collapsed) {
@@ -30,22 +47,44 @@
       box-shadow: none;
     }
 
+    .accordion-button::after {
+      transform: rotate(0deg);
+      transition: transform 0.2s ease;
+    }
+
+    .accordion-button:not(.collapsed)::after {
+      transform: rotate(90deg);
+    }
+
     .accordion-body {
       background-color: #ffffff;
       border-radius: 0 0 0.75rem 0.75rem;
+      padding: 1.25rem 1.5rem;
+      color: #333;
+    }
+
+    h1 {
+      font-weight: 700;
+      color: #0d1b2a;
+      margin-bottom: 1rem;
+    }
+
+    p {
+      color: #555;
     }
   </style>
 </head>
+
 <body>
 
   <!-- Navbar centralizada -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
+  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm fixed-top">
     <div class="container justify-content-center">
       <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
           <li class="nav-item"><a class="nav-link active" href="praticas.html">Práticas</a></li>
-          <li class="nav-item"><a class="nav-link" href="referencia.html">Referências</a></li>
+          <li class="nav-item"><a class="nav-link" href="referencias.html">Referências</a></li>
           <li class="nav-item"><a class="nav-link" href="autores.html">Autores</a></li>
         </ul>
       </div>
@@ -54,27 +93,45 @@
 
   <!-- Seção principal -->
   <section class="container py-5">
-    <h1 class="fw-bold mb-4">Práticas</h1>
+    <h1 class="fw-bold">Práticas</h1>
+    <p class="text-secondary mb-4">Selecione uma prática abaixo para visualizar seu conteúdo.</p>
 
-    <!-- Caixa expansível de Prática 1 -->
-    <div class="accordion mt-4" id="accordionPraticas">
-      <div class="accordion-item border-0 shadow-sm rounded-3">
+    <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 1 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica1">
         <h2 class="accordion-header">
-          <button class="accordion-button fw-semibold" type="button" data-bs-toggle="collapse" data-bs-target="#pratica1" aria-expanded="false" aria-controls="pratica1">
-            Prática 1
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica1"
+                  aria-expanded="false" aria-controls="collapsePratica1">
+            🧪 Prática 1 — Introdução ao Formato FASTQ
           </button>
         </h2>
-        <div id="pratica1" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+        <div id="collapsePratica1" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p>Aqui entra o conteúdo explicativo da Prática 1.</p>
-            <p>Você pode colocar texto, imagens, ou até blocos de código e links aqui.</p>
+            <p><strong>Objetivo:</strong> compreender a estrutura e o conteúdo dos arquivos FASTQ.</p>
+            <p>Nesta prática, o aluno deve analisar um arquivo FASTQ real, identificar suas quatro linhas principais e relacionar os símbolos de qualidade com os valores Phred correspondentes.</p>
+            <p>É possível utilizar softwares como o <code>FastQC</code> para visualizar graficamente a qualidade das leituras.</p>
           </div>
         </div>
       </div>
     </div>
-
   </section>
 
+  <!-- Scripts -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+  <script>
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica1") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+  </script>
+
 </body>
 </html>
