--- a/autores.html
+++ b/autores.html
@@ -31,12 +31,13 @@
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Autores</h1>
     <ul>
-      <li>👩‍🔬 Sophia Pereira Ozório – Graduanda em Informática Biomédica - USP</li>
+      <li>Sophia Pereira Ozório – Graduanda em Informática Biomédica - USP</li>
     </ul>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
