--- a/referencia.html
+++ b/referencia.html
@@ -31,7 +31,7 @@
     
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Referências</h1>
-    <p>Adicionar artigos, links úteis e materiais de apoio.</p>
+    <h3 class="fw-bold mb-4">Ferramentas</h3>
     <ul>
       <li><a href="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/">FastQC</a></li>
       <li><a href="https://seqera.io/multiqc/">MultiQC</a></li>
@@ -40,6 +40,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
