--- a/praticas.html
+++ b/praticas.html
@@ -104,14 +104,14 @@
           <button class="accordion-button fw-semibold collapsed" type="button"
                   data-bs-toggle="collapse" data-bs-target="#collapsePratica1"
                   aria-expanded="false" aria-controls="collapsePratica1">
-            🧪 Prática 1 — Introdução ao Formato FASTQ
+            Prática 1 — Download dos dados
           </button>
         </h2>
         <div id="collapsePratica1" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
-            <p><strong>Objetivo:</strong> compreender a estrutura e o conteúdo dos arquivos FASTQ.</p>
-            <p>Nesta prática, o aluno deve analisar um arquivo FASTQ real, identificar suas quatro linhas principais e relacionar os símbolos de qualidade com os valores Phred correspondentes.</p>
-            <p>É possível utilizar softwares como o <code>FastQC</code> para visualizar graficamente a qualidade das leituras.</p>
+            <p><strong>Objetivo:</strong> Baixar os dados necessários para o projeto.</p>
+            <p>Nesta prática, os alunos deverão escolher o tema de estudo e buscar amostras em bases de dados para análise. Se atendem de selecionar dados de exoma!!</p>
+            <p>Alguns bancos de dados que podem ser utilizados: NCBI (National Center for Biotechnology Information), ENSEMBL, UCSC Genome Browser, TCGA (The Cancer Genome Atlas) e GEO (Gene Expression Omnibus). Links para os bancos se encontram na aba "Referências"</p>
           </div>
         </div>
       </div>
@@ -135,3 +135,4 @@
 
 </body>
 </html>
+
