--- a/fastq.html
+++ b/fastq.html
@@ -111,7 +111,7 @@
     <!-- Caixa da Prática 1 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
       <a href="praticas.html#pratica1">
-        <span>🧪 Prática 1</span>
+        <span>Prática 1</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
