--- a/referencia.html
+++ b/referencia.html
@@ -31,15 +31,28 @@
     
   <section class="container py-5">
     <h1 class="fw-bold mb-4">Referências</h1>
-    <h3 class="fw-bold mb-4">Ferramentas</h3>
+    <h4 class="fw-bold mb-4">Ferramentas:</h4>
     <ul>
       <li><a href="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/">FastQC</a></li>
       <li><a href="https://seqera.io/multiqc/">MultiQC</a></li>
+      <li><a href="https://www.bioinformatics.babraham.ac.uk/projects/trim_galore/">Trim Galore</a></li>
+      <li><a href="https://bio-bwa.sourceforge.net/">BWA MEM</a></li>
+      <li><a heref="https://gatk.broadinstitute.org/hc/en-us">GATK</a></li>
+      <li><a href="https://pcingola.github.io/SnpEff/">SnpEff e SnpSift</a></li>
     </ul>
+    <h4 class="fw-bold mb-4">Bancos de Dados:</h4>
+    <u1>
+      <li><a href="https://www.ncbi.nlm.nih.gov/">NCBI</a></li>
+      <li><a href="https://www.ensembl.org/index.html">ENSEMBL</a></li>
+      <li><a href="https://genome.ucsc.edu/">UCSC Genome Browser</a></li>
+      <li><a href="https://portal.gdc.cancer.gov/">TCGA</a></li>
+      <li><a href="https://www.ncbi.nlm.nih.gov/geo/">GEO</a></li>
+    </u1>
   </section>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
