--- a/qc.html
+++ b/qc.html
@@ -73,7 +73,7 @@
 
 <body>
   <div class="container">
-    <h1>Controle de Qualidade (QC)</h1>
+    <h1>🧪 Controle de Qualidade (QC)</h1>
 
     <!-- Bloco FASTQ -->
     <div class="card p-4">
@@ -85,7 +85,7 @@
       </div>
     </div>
 
-    <!-- Bloco ferramenta -->
+    <!-- Bloco fastQC -->
     <div class="card p-4">
       <div class="card-body">
         <h3 class="card-title">FastQC</h3>
@@ -99,38 +99,38 @@
         <img 
           src="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc.png"
           alt="Arquivo html do FastQC"
-          class="img-fluid img-example">
+          class="img-fluid img-example"><br>
         <p class="card-text">
-          **Qualidade por Base (Per base sequence quality):**
-            Exibe a distribuição das pontuações de qualidade Phred em cada posição das leituras. É comum observar uma queda de qualidade nas posições finais, o que deve ser monitorado com atenção.
+           <strong>Qualidade por Base (Per base sequence quality):</strong><br>
+            Exibe a distribuição das pontuações de qualidade Phred em cada posição das leituras. É comum observar uma queda de qualidade nas posições finais, o que deve ser monitorado com atenção.<br><br>
 
-          **Qualidade por Leitura (Per sequence quality scores):""
-            Mostra a distribuição das pontuações médias de qualidade de todas as leituras, ajudando a identificar se há uma proporção significativa de leituras com baixa qualidade geral.
+           <strong>Qualidade por Leitura (Per sequence quality scores):</strong><br>
+            Mostra a distribuição das pontuações médias de qualidade de todas as leituras, ajudando a identificar se há uma proporção significativa de leituras com baixa qualidade geral.<br><br>
 
-          **Conteúdo de GC por Posição (Per base GC content):**
-            Apresenta a porcentagem de bases Guanina (G) e Citosina (C) em cada posição da leitura. Desvios acentuados do padrão esperado (com base no organismo) podem indicar contaminação ou viés de sequenciamento.
+           <strong>Conteúdo de GC por Posição (Per base GC content):</strong><br>
+            Apresenta a porcentagem de bases Guanina (G) e Citosina (C) em cada posição da leitura. Desvios acentuados do padrão esperado (com base no organismo) podem indicar contaminação ou viés de sequenciamento.<br><br>
 
-          **Conteúdo de GC por Sequência (Per sequence GC content):**
-            Mostra a distribuição do conteúdo médio de GC entre todas as leituras analisadas.
+           <strong>Conteúdo de GC por Sequência (Per sequence GC content):</strong><br>
+            Mostra a distribuição do conteúdo médio de GC entre todas as leituras analisadas.<br><br>
 
-          **Níveis de Duplicação de Sequência (Sequence Duplication Levels):**
-            Avalia a proporção de leituras duplicadas, o que pode indicar super-amplificação por PCR ou baixa complexidade da biblioteca.
+           <strong>Níveis de Duplicação de Sequência (Sequence Duplication Levels):</strong><br>
+            Avalia a proporção de leituras duplicadas, o que pode indicar super-amplificação por PCR ou baixa complexidade da biblioteca.<br><br>
 
-          **Conteúdo de Adaptadores (Adapter Content):**
-            Detecta a presença de sequências de adaptadores de sequenciamento, que devem ser removidas durante o pré-processamento dos dados.
+           <strong>Conteúdo de Adaptadores (Adapter Content):</strong><br>
+            Detecta a presença de sequências de adaptadores de sequenciamento, que devem ser removidas durante o pré-processamento dos dados.<br><br>
 
-          **Conteúdo de Bases N (N Content):**
-            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.
+           <strong>Conteúdo de Bases N (N Content):</strong><br>
+            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.<br><br>
 
           Cada métrica recebe um status **(Normal, Aviso ou Falha)**, facilitando a identificação rápida de possíveis problemas na qualidade das amostras.
         </p>
       </div>
     </div>
 
-    <!-- Caixa da Prática 1 -->
+    <!-- Caixa da Prática 2 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
-      <a href="praticas.html#pratica1">
-        <span>Prática 1</span>
+      <a href="praticas.html#pratica2">
+        <span>Prática 2</span>
         <span style="font-size: 1.4rem;">➜</span>
       </a>
     </div>
