--- a/qc.html
+++ b/qc.html
@@ -99,31 +99,31 @@
         <img 
           src="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc.png"
           alt="Arquivo html do FastQC"
-          class="img-fluid img-example"><br>
-        <p class="card-text">
-           <strong>Qualidade por Base (Per base sequence quality):</strong><br>
-            Exibe a distribuição das pontuações de qualidade Phred em cada posição das leituras. É comum observar uma queda de qualidade nas posições finais, o que deve ser monitorado com atenção.<br><br>
+          class="img-fluid img-example">
+        <ul class="card-text">
+           <li><strong>Qualidade por Base (Per base sequence quality):</strong>
+            Exibe a distribuição das pontuações de qualidade Phred em cada posição das leituras. É comum observar uma queda de qualidade nas posições finais, o que deve ser monitorado com atenção.</li>
 
-           <strong>Qualidade por Leitura (Per sequence quality scores):</strong><br>
-            Mostra a distribuição das pontuações médias de qualidade de todas as leituras, ajudando a identificar se há uma proporção significativa de leituras com baixa qualidade geral.<br><br>
+           <li><strong>Qualidade por Leitura (Per sequence quality scores):</strong>
+            Mostra a distribuição das pontuações médias de qualidade de todas as leituras, ajudando a identificar se há uma proporção significativa de leituras com baixa qualidade geral.</li>
 
-           <strong>Conteúdo de GC por Posição (Per base GC content):</strong><br>
-            Apresenta a porcentagem de bases Guanina (G) e Citosina (C) em cada posição da leitura. Desvios acentuados do padrão esperado (com base no organismo) podem indicar contaminação ou viés de sequenciamento.<br><br>
+           <li><strong>Conteúdo de GC por Posição (Per base GC content):</strong>
+            Apresenta a porcentagem de bases Guanina (G) e Citosina (C) em cada posição da leitura. Desvios acentuados do padrão esperado (com base no organismo) podem indicar contaminação ou viés de sequenciamento.</li>
 
-           <strong>Conteúdo de GC por Sequência (Per sequence GC content):</strong><br>
-            Mostra a distribuição do conteúdo médio de GC entre todas as leituras analisadas.<br><br>
+           <li><strong>Conteúdo de GC por Sequência (Per sequence GC content):</strong>
+            Mostra a distribuição do conteúdo médio de GC entre todas as leituras analisadas.</li>
 
-           <strong>Níveis de Duplicação de Sequência (Sequence Duplication Levels):</strong><br>
-            Avalia a proporção de leituras duplicadas, o que pode indicar super-amplificação por PCR ou baixa complexidade da biblioteca.<br><br>
+           <li><strong>Níveis de Duplicação de Sequência (Sequence Duplication Levels):</strong>
+            Avalia a proporção de leituras duplicadas, o que pode indicar super-amplificação por PCR ou baixa complexidade da biblioteca.</li>
 
-           <strong>Conteúdo de Adaptadores (Adapter Content):</strong><br>
-            Detecta a presença de sequências de adaptadores de sequenciamento, que devem ser removidas durante o pré-processamento dos dados.<br><br>
+           <li><strong>Conteúdo de Adaptadores (Adapter Content):</strong>
+            Detecta a presença de sequências de adaptadores de sequenciamento, que devem ser removidas durante o pré-processamento dos dados.</li>
 
-           <strong>Conteúdo de Bases N (N Content):</strong><br>
-            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.<br><br>
+           <li><strong>Conteúdo de Bases N (N Content):</strong>
+            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.</li>
 
           Cada métrica recebe um status **(Normal, Aviso ou Falha)**, facilitando a identificação rápida de possíveis problemas na qualidade das amostras.
-        </p>
+        </ul>
       </div>
     </div>
 
