--- a/qc.html
+++ b/qc.html
@@ -122,7 +122,7 @@
            <li><strong>Conteúdo de Bases N (N Content):</strong>
             Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.</li>
 
-          Cada métrica recebe um status **(Normal, Aviso ou Falha)**, facilitando a identificação rápida de possíveis problemas na qualidade das amostras.
+          Cada métrica recebe um status <strong>(Normal, Aviso ou Falha)</strong>, facilitando a identificação rápida de possíveis problemas na qualidade das amostras.
         </ul>
       </div>
     </div>
