--- a/qc.html
+++ b/qc.html
@@ -121,7 +121,7 @@
             Detecta a presença de sequências de adaptadores de sequenciamento, que devem ser removidas durante o pré-processamento dos dados.</li>
 
            <li><strong>Conteúdo de Bases N (N Content):</strong>
-            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.</li>
+            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.</li><br><br>
 
           Cada métrica recebe um status <strong>(Normal, Aviso ou Falha)</strong>, facilitando a identificação rápida de possíveis problemas na qualidade das amostras.
         </ul>
