--- a/qc.html
+++ b/qc.html
@@ -99,7 +99,7 @@
         <img 
           src="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc.png"
           alt="Arquivo html do FastQC"
-          style="margin-right: 15px;"
+          style="margin-bottom: 20px;"
           class="img-fluid img-example">
         <ul class="card-text">
            <li><strong>Qualidade por Base (Per base sequence quality):</strong>
@@ -121,7 +121,7 @@
             Detecta a presença de sequências de adaptadores de sequenciamento, que devem ser removidas durante o pré-processamento dos dados.</li>
 
            <li><strong>Conteúdo de Bases N (N Content):</strong>
-            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.</li><br><br>
+            Indica a porcentagem de bases “N”, ou seja, bases não identificadas em cada posição. Um alto percentual de Ns pode apontar problemas de leitura durante o sequenciamento.</li><br>
 
           Cada métrica recebe um status <strong>(Normal, Aviso ou Falha)</strong>, facilitando a identificação rápida de possíveis problemas na qualidade das amostras.
         </ul>
