--- a/qc.html
+++ b/qc.html
@@ -139,6 +139,13 @@
         <p class="card-text">
           O MultiQC combina relatórios de diferentes ferramentas (como FastQC e Cutadapt) ou de diversas amostras em um único relatório interativo em HTML, permitindo fazer uma análise comparativa de múltiplas amostras de forma rápida e identificar problemas com facilidade.
         </p>
+        <img 
+          src="https://biocorecrg.github.io/RNAseq_course_2019/images/multiqc.png"
+          alt="Arquivo html do MultiQC"
+          style="margin-bottom: 30px;"
+          class="img-fluid img-example">
+        </div>
+    </div>
         
     <!-- Caixa da Prática 2 -->
     <div class="practice-box card mt-4 shadow-sm border-0">
