--- a/qc.html
+++ b/qc.html
@@ -137,7 +137,7 @@
         </p>
         <h5 class="card-title">Como funciona:</h5>
         <p class="card-text">
-          O MultiQC combina relatórios de diferentes ferramentas (como FastQC e Cutadapt) ou de diversas amostras em um único relatório interativo em HTML, permitindo fazer uma análise comparativa de múltiplas amostras de forma rápida e identificar problemas com facilidade.
+          O MultiQC combina relatórios de diferentes ferramentas (como FastQC, Cutadapt, STAR, Bowtie2 ou BWA-MEM) ou de diversas amostras em um único relatório interativo em HTML, permitindo fazer uma análise comparativa de múltiplas amostras de forma rápida e identificar problemas com facilidade.
         </p>
         <img 
           src="https://biocorecrg.github.io/RNAseq_course_2019/images/multiqc.png"
