--- a/qc.html
+++ b/qc.html
@@ -99,7 +99,7 @@
         <img 
           src="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc.png"
           alt="Arquivo html do FastQC"
-          style="margin-bottom: 30px;"
+          style="text-align: center; margin-bottom: 30px;"
           class="img-fluid img-example">
         <ul class="card-text">
            <li><strong>Qualidade por Base (Per base sequence quality):</strong>
