--- a/praticas.html
+++ b/praticas.html
@@ -116,6 +116,147 @@
         </div>
       </div>
     </div>
+
+    <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 2 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica2">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica2"
+                  aria-expanded="false" aria-controls="collapsePratica2">
+            Prática 2 — Controle de qualidade
+          </button>
+        </h2>
+        <div id="collapsePratica2" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar o controle de qualidade das amostras baixadas.</p>
+            <p>Nesta prática, os alunos deverão realizar com controle de qualidade com a ferramente FastQC. Para isso:</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 3 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica3">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica3"
+                  aria-expanded="false" aria-controls="collapsePratica3">
+            Prática 3 — Trimagem
+          </button>
+        </h2>
+        <div id="collapsePratica3" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar, caso necessário, a trimagem das amostras.</p>
+            <p>Nesta prática, os alunos deverão realizar...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 4 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica4">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica4"
+                  aria-expanded="false" aria-controls="collapsePratica4">
+            Prática 4 — Alinhamento
+          </button>
+        </h2>
+        <div id="collapsePratica4" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar o alinhamento dos amostras com o genoma de referência.</p>
+            <p>Nesta prática, os alunos deverão realizar...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+      <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 5 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica5">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica5"
+                  aria-expanded="false" aria-controls="collapsePratica5">
+            Prática 5 — Boas práticas GATK
+          </button>
+        </h2>
+        <div id="collapsePratica5" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar as boas práticas do GATK, antes de realizar a chamada de variantes.</p>
+            <p>Nesta prática, os alunos deverão realizar...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 6 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica6">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica6"
+                  aria-expanded="false" aria-controls="collapsePratica6">
+            Prática 6 — Chamada de variantes
+          </button>
+        </h2>
+        <div id="collapsePratica6" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar a chamada de variantes com a ferramenta Haplotypecaller do GATK.</p>
+            <p>Nesta prática, os alunos deverão realizar...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+      <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 7 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica7">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica7"
+                  aria-expanded="false" aria-controls="collapsePratica7">
+            Prática 7 — Anotação das variantes
+          </button>
+        </h2>
+        <div id="collapsePratica7" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar anotação funcional das variantes.</p>
+            <p>Nesta prática, os alunos deverão realizar...:</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+      <!-- Accordion de práticas -->
+    <div class="accordion" id="accordionPraticas">
+      <!-- Prática 8 -->
+      <div class="accordion-item border-0 shadow-sm rounded-3" id="pratica8">
+        <h2 class="accordion-header">
+          <button class="accordion-button fw-semibold collapsed" type="button"
+                  data-bs-toggle="collapse" data-bs-target="#collapsePratica8"
+                  aria-expanded="false" aria-controls="collapsePratica8">
+            Prática 8 — Análises
+          </button>
+        </h2>
+        <div id="collapsePratica8" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
+          <div class="accordion-body">
+            <p><strong>Objetivo:</strong> Realizar análises a partir dos dados processados.</p>
+            <p>Nesta prática, os alunos deverão realizar...</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  
   </section>
 
   <!-- Scripts -->
@@ -135,5 +276,6 @@
 
 </body>
 </html>
+
 
 
