--- a/qc.html
+++ b/qc.html
@@ -99,8 +99,7 @@
         <img 
           src="https://www.bioinformatics.babraham.ac.uk/projects/fastqc/fastqc.png"
           alt="Arquivo html do FastQC"
-          style="text-align: center; margin-bottom: 30px;"
-          class="img-fluid img-example">
+          class="img-fluid mx-auto d-block mb-3 img-example">
         <ul class="card-text">
            <li><strong>Qualidade por Base (Per base sequence quality):</strong>
             Exibe a distribuição das pontuações de qualidade Phred em cada posição das leituras. É comum observar uma queda de qualidade nas posições finais, o que deve ser monitorado com atenção.</li>
