--- a/praticas.html
+++ b/praticas.html
@@ -131,7 +131,7 @@
         <div id="collapsePratica2" class="accordion-collapse collapse" data-bs-parent="#accordionPraticas">
           <div class="accordion-body">
             <p><strong>Objetivo:</strong> Realizar o controle de qualidade das amostras baixadas.</p>
-            <p>Nesta prática, os alunos deverão realizar com controle de qualidade com a ferramente FastQC. Para isso:</p>
+            <p>Nesta prática, os alunos deverão realizar o controle de qualidade com a ferramente FastQC. Para isso:</p>
           </div>
         </div>
       </div>
@@ -276,6 +276,7 @@
 
 </body>
 </html>
+
 
 
 
