--- a/praticas.html
+++ b/praticas.html
@@ -272,10 +272,81 @@
         targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
       }
     });
+    
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica1") {
+        const targetCollapse = document.querySelector("#collapsePratica2");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica3") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica4") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica5") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica6") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica7") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
+
+    // Abre automaticamente a Prática 1 se vier do link com #pratica1
+    document.addEventListener("DOMContentLoaded", function () {
+      if (window.location.hash === "#pratica8") {
+        const targetCollapse = document.querySelector("#collapsePratica1");
+        const bsCollapse = new bootstrap.Collapse(targetCollapse, { toggle: true });
+        // rola suavemente até a prática
+        targetCollapse.scrollIntoView({ behavior: "smooth", block: "start" });
+      }
+    });
   </script>
 
 </body>
 </html>
+
 
 
 
