--- a/index.html
+++ b/index.html
@@ -118,24 +118,31 @@
         <p>Mapeamento das leituras contra o genoma de referência.</p>
       </div>
 
+      <!-- Boas Práticas -->
+      <div class="col-md-4 text-center">
+        <div class="icon-circle">✅</div>
+        <h5><a href="variantes.html" class="text-decoration-none">5. Boas práticas</a></h5>
+        <p>Práticas aplicadas às amostras que asseguram a identificação precisa e confiável das variantes genéticas.</p>
+      </div>
+      
       <!-- Chamada de Variantes -->
       <div class="col-md-4 text-center">
         <div class="icon-circle">🔎</div>
-        <h5><a href="variantes.html" class="text-decoration-none">5. Chamada de Variantes</a></h5>
+        <h5><a href="variantes.html" class="text-decoration-none">6. Chamada de Variantes</a></h5>
         <p>Identificação de SNVs e indels nas amostras.</p>
       </div>
 
       <!-- Anotação de Variantes -->
       <div class="col-md-4 text-center">
         <div class="icon-circle">📑</div>
-        <h5><a href="anotacao.html" class="text-decoration-none">6. Anotação de Variantes</a></h5>
+        <h5><a href="anotacao.html" class="text-decoration-none">7. Anotação de Variantes</a></h5>
         <p>Enriquecimento funcional das variantes.</p>
       </div>
 
       <!-- Análises -->
       <div class="col-md-12 text-center">
         <div class="icon-circle">📊</div>
-        <h5><a href="analises.html" class="text-decoration-none">7. Análises</a></h5>
+        <h5><a href="analises.html" class="text-decoration-none">8. Análises</a></h5>
         <p>Exploração estatística e interpretação biológica dos resultados.</p>
       </div>
 
@@ -144,6 +151,7 @@
 
 </body>
 </html>
+
 
 
 
