--- a/referencia.html
+++ b/referencia.html
@@ -39,6 +39,7 @@
       <li><a href="https://bio-bwa.sourceforge.net/">BWA MEM</a></li>
       <li><a href="https://gatk.broadinstitute.org/hc/en-us">GATK</a></li>
       <li><a href="https://pcingola.github.io/SnpEff/">SnpEff e SnpSift</a></li>
+      <li><a href="https://www.htslib.org/">Samtools</a></li>
     </ul>
     <h4 class="fw-bold mb-4">Bancos de Dados:</h4>
     <ul>
@@ -52,6 +53,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
 
 
 
