--- a/index.html
+++ b/index.html
@@ -131,26 +131,28 @@
         <h5><a href="variantes.html" class="text-decoration-none">6. Chamada de Variantes</a></h5>
         <p>Identificação de SNVs e indels nas amostras.</p>
       </div>
-
-      <!-- Anotação de Variantes -->
-      <div class="col-md-4 text-center">
-        <div class="icon-circle">📑</div>
-        <h5><a href="anotacao.html" class="text-decoration-none">7. Anotação de Variantes</a></h5>
-        <p>Enriquecimento funcional das variantes.</p>
-      </div>
-
-      <!-- Análises -->
-      <div class="col-md-4 text-center">
-        <div class="icon-circle">📊</div>
-        <h5><a href="analises.html" class="text-decoration-none">8. Análises</a></h5>
-        <p>Exploração estatística e interpretação biológica dos resultados.</p>
-      </div>
-
     </div>
+    
+    <div class="row justify-content-center">
+    <!-- Caixa 7 -->
+    <div class="col-md-4 text-center">
+      <div class="icon-circle"><img src="icon7.png" alt=""></div>
+      <h5>7. Anotação de Variantes</h5>
+      <p>Enriquecimento funcional das variantes.</p>
+    </div>
+
+    <!-- Caixa 8 -->
+    <div class="col-md-4 text-center">
+      <div class="icon-circle"><img src="icon8.png" alt=""></div>
+      <h5>8. Análises</h5>
+      <p>Exploração estatística e interpretação biológica dos resultados.</p>
+    </div>
+  </div>
   </section>
 
 </body>
 </html>
+
 
 
 
